@@ -4,7 +4,7 @@ description: 了解如何执行就地升级。
 topic-tags: upgrading
 feature: Upgrading
 exl-id: aef6ef00-993c-4252-b0ad-ddc4917beaf7
-source-git-commit: 64c9296554c55b539145dd59a14b2255b1750e47
+source-git-commit: 6d2b7e341dcdedf3c000b9fb0ecd21722bdf2a27
 workflow-type: tm+mt
 source-wordcount: '1256'
 ht-degree: 0%
@@ -68,7 +68,7 @@ java -Xmx4096m -jar aem-quickstart.jar -v -x crx2oak -xargs -- --load-profile <<
   <tr>
    <td><strong>源存储库</strong></td>
    <td><strong>目标存储库</strong></td>
-   <td><strong>个人资料</strong></td>
+   <td><strong>配置文件</strong></td>
    <td><strong>其他标记</strong><br /> </td>
   </tr>
   <tr>
@@ -187,7 +187,7 @@ While `FileDataStore` 是AEM 6.3安装的新默认设置，无需使用外部数
 1. 通过替换现有jar的路径( `crx-quickstart/app/aem-quickstart*.jar` 在本例中)，新jar是 `crx-quickstart` 文件夹。 以我们以前的命令为例，我们的命令将为：
 
    ```shell
-   /usr/bin/java -server -Xmx1024m -XX:MaxPermSize=256M -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar cq-quickstart-6.5.0.jar -c crx-quickstart -p 4502 -Dsling.properties=conf/sling.properties
+   /usr/bin/java -server -Xmx1024m -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar cq-quickstart-6.5.0.jar -c crx-quickstart -p 4502 -Dsling.properties=conf/sling.properties
    ```
 
    这将确保为升级应用所有正确的内存设置、自定义运行模式和其他环境参数。 升级完成后，可以从将来启动的启动脚本中启动实例。
